# zapmyco

./: .editorconfig  .gitignore  .gitmodules  .nxdeps.json  Dockerfile  LICENSE  README.md  README.zh-CN.md  main.py  nx.json  package.json  pnpm-lock.yaml  project.json  pyproject.toml  sonar-project.properties  test_evaluator.py  test_evaluator_performance.py  tsconfig.base.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  code-quality.yml  sonarcloud.yml
apps/backend/: .gitignore  README.md  main.py  pyproject.toml  start_server.sh
apps/backend/services/: mi_api.py
apps/frontend/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/frontend-e2e/: package.json  playwright.config.ts
apps/frontend/src/: App.spec.tsx  App.tsx  GridLayout.test.tsx  main.tsx  nx-welcome.tsx  use-home-assistant.ts
apps/frontend/src/components/: WebSocketExample.tsx
apps/frontend/src/components/devices/: index.ts
apps/frontend/src/ui/: card.tsx  chart.tsx  slider-ios.tsx  slider.tsx  switch.tsx  tabs.tsx
apps/zapmyco/: package.json  tsconfig.app.json  vite.config.ts
apps/zapmyco-e2e/: package.json
apps/zapmyco/src/: GridLayout.test.tsx  GridLayout.tsx  app.tsx  main.tsx  use-home-assistant.ts  utils.test.ts  utils.ts
apps/zapmyco/src/components/devices/: DebugCard.tsx  ServiceCard.tsx  card-registry.ts  combine-matchers.ts  constants.ts  entity-matchers.ts  index.ts  matchers.ts  matching-system.ts  types.ts
apps/zapmyco/src/components/devices/air-purifier-card/: AirPurifierCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/automation-card/: AutomationCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/curtain-card/: CurtainCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/default-card/: DefaultCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/energy-card/: EnergyCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/health-card/: HealthCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/humidifier-card/: HumidifierCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/light-card/: LightCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/occupancy-sensor-card/: OccupancySensorCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/one-switch-card/: OneSwitchCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/devices/oven-card/: OvenCard.tsx  index.ts  spec.ts
apps/zapmyco/src/components/grid/: DynamicCardRenderer.tsx
apps/zapmyco/src/components/ui/: avatar.tsx  button.tsx  card.tsx  chart.tsx  progress.tsx  slider-ios.tsx  slider.tsx  switch.tsx  tabs.tsx
apps/zapmyco/src/hocs/: withDraggable.tsx
apps/zapmyco/src/types/: index.ts
apps/zapmyco/src/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  progress.tsx  slider-ios.tsx  slider.tsx  switch.tsx  tabs.tsx
config/: agent_config.yaml  config.yaml  evaluation_config.yaml  metrics_config.yaml
evaluation/: main.py
evaluation/core/: evaluator.py
evaluation/core/metrics/: efficiency_metrics.py  metric_calculator.py  user_experience_metrics.py
evaluation/core/utils/: dataset_loader.py
evaluation/datasets/core_tests/: air_quality.jsonl  alarm_control_panel.jsonl  assist_satellite.jsonl  binary_sensor.jsonl  button.jsonl  calendar.jsonl  camera.jsonl  climate.jsonl  context_awareness.jsonl  conversation.jsonl  cover.jsonl  date.jsonl  datetime.jsonl  device_tracker.jsonl  event.jsonl  execution.jsonl  fan.jsonl  humidifier.jsonl  image.jsonl  intent_understanding.bak.jsonl  intent_understanding.jsonl  lawn_mower.jsonl  light.jsonl  lock.jsonl  media_player.jsonl  notify.jsonl  number.jsonl  remote.jsonl  scene.jsonl  select.jsonl  sensor.jsonl  siren.jsonl  switch.jsonl  time.jsonl  vacuum.jsonl  valve.jsonl  water_heater.jsonl
evaluation/datasets/scenario_tests/: daily_usage.jsonl  edge_cases.jsonl  error_scenarios.jsonl
evaluation/datasets/stress_tests/: complex_instructions.jsonl  concurrent_requests.jsonl  long_conversations.jsonl
evaluation/docs/: architecture.mmd  workflow.mmd
evaluation/framework/: evaluator.py
evaluation/framework/connectors/: agent_connector.py
evaluation/framework/metrics/: accuracy_metrics.py  efficiency_metrics.py  metric_calculator.py  robustness_metrics.py  user_experience_metrics.py
evaluation/framework/mock/: __init__.py  mock_agent.py
evaluation/framework/utils/: config_loader.py  environment_simulator.py  result_processor.py
evaluation/reports/: report_generator.py
evaluation/tools/: benchmark_runner.py  dataset_validator.py  jsonl_manager.py
homeassistant/: restapi.py  websocket.py
results/raw_results/: evaluation.json
results/reports/: evaluation_report.json
tests/: conftest.py  test_mcp_with_mock.py
tests/fixtures/configs/home_assistant/: test_config.json
tests/fixtures/data/home_assistant/: get_config.json  get_panels.json  get_services.json  get_states.json
tests/integration/: conftest.py
tests/integration/home_assistant/: test_api.py
tests/test_cases/: light_control.json
tests/unit/: conftest.py
tests/unit/home_assistant/: test_client.py
zapmyco/: __init__.py  app.py  config.py  llm.py  main.py  mcp_client.py  voice.py
zapmyco/integrations/home_assistant/: context_provider.py  main.py  mcp.py  models.py
zapmyco/mcp_servers/: home_assistant.py
zapmyco/security/: encryption.py
zapmyco/utils/: logger.py
(+24 files in other folders)
