[tool.poetry]
name = "zapmyco"
version = "0.1.0"
description = "Zapmyco is a home agent."
authors = [
    "shenjingnan <sjn.code@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "zapmyco" }
]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = {extras = ["socks"], version = ">=0.28.1,<0.29.0"}
openai = ">=1.70.0,<2.0.0"
black = "^24.2.0"
websockets = "^12.0"
python-dotenv = "^1.0.1"
pylint = "^3.3.6"

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
